externals/mtime/include/mtime_eventHandling.h

struct _event;
/**
 * @struct _eventGroup
 *
 * @brief struct _eventGroup defines an Event-group. Each event group has an associated list of events.
 * 	  Event group is a place holder to 'group' events based on some user defined charteristics.
 * 	  	
 */
struct _eventGroup
{
  int64_t eventGroupId;		///< Event Group's ID.
  char* eventGroupName;		///< Event Group's name.

  struct _event* rootEvent;	///< Pointer to a List of events in this group.
};
struct _eventGroup*
newEventGroup(char* _eventGroupName);
void
deallocateEventGroup(struct _eventGroup* eg);
bool
addNewEventToEventGroup(struct _event* e, struct _eventGroup* eg);
bool
removeEventFromEventGroup(char* eventName, struct _eventGroup* eg);
/**
 * @struct _event
 *
 * @brief struct _event defines events. Events are set to be triggered at pre-specified intervals. 
 *              
 */
struct _event
{
  struct _event* nextEventInGroup;		///< Pointer to the next event in a given Event Group.

  int64_t eventId;				///< Auto generated. (For future use. Not in use yet).
  char* eventName;				///< Event's name.

  struct _datetime* eventReferenceDateTime;	///< Anchor datetime.

  struct _datetime* eventFirstDateTime;		///< Start datetime of the event. Can be empty string ? TODO: On Luis: we need to resolve this.
  struct _datetime* eventLastDateTime;		///< Last datetime of the event. Can be empty string  ? TODO: On Luis: we need to resolve this.

  struct _timedelta* eventInterval;		///< TimeDelta between succesive triggers.

  bool triggerCurrentEvent;			///< is this event active?


  //Properties of the event being triggered.

  bool nextEventIsFirst;			///< Is the next scheduled event the first to be triggered?

  bool eventisFirstInDay;	///< Is the event being triggered (i.e event when triggerCurrentEvent is true) First-In-Day?
  bool eventisFirstInMonth; 	///< Is the event being triggered (i.e event when triggerCurrentEvent is true) First-In-Month?
  bool eventisFirstInYear; 	///< Is the event being triggered (i.e event when triggerCurrentEvent is true) First-In-Year?
  bool eventisLastInDay; 	///< Is the event being triggered (i.e event when triggerCurrentEvent is true) Last-In-Day?
  bool eventisLastInMonth; 	///< Is the event being triggered (i.e event when triggerCurrentEvent is true) Last-In-Month?
  bool eventisLastInYear;	///< Is the event being triggered (i.e event when triggerCurrentEvent is true) Last-In-Year?

  struct _datetime* triggerNextEventDateTime;		///< Trigger the event next at this DT.
  struct _datetime* triggeredPreviousEventDateTime;	///< Last Trigger event happened at this DT.

};
struct _event*
newEvent(char* _eventName, char* _eventReferenceDate, char* _eventFirstDate, char* _eventLastDate, char* _eventInterval);
void
deallocateEvent(struct _event* e);
char*
eventToString(struct _event* e, char* string);