externals/mtime/src/libmtime.f90

  subroutine getJulianDayFromDatetime(dt, jd)
    type(datetime), target :: dt
    type(julianday), pointer :: jd
    type(c_ptr) :: dummy_ptr
    dummy_ptr = my_getjuliandayfromdatetime(c_loc(dt), c_loc(jd))
  end subroutine getJulianDayFromDatetime
  !
end module mtime_datetime
!>
!! @brief TimeDelta and some operations supported on TimeDelta.
!!
!! @details
!!
!! @author  Luis Kornblueh, Max Planck Institute for Meteorology
!! @author  Rahul Sinha, Max Planck Institute for Meteorology
!!
!___________________________________________________________________________________________________________
module mtime_timedelta
  !
  use, intrinsic :: iso_c_binding, only: c_int, c_int64_t, c_char, c_ptr, c_null_char, c_loc, c_f_pointer
  !
  use mtime_datetime
  !
  implicit none
  !
  private
  !
  public :: max_timedelta_str_len
  public :: timedelta
  public :: newTimedelta
  public :: deallocateTimedelta
  public :: timedeltaToString
  public :: operator(+)
  !
  !> provides a string length for toString 
  integer, parameter :: max_timedelta_str_len = 32
  !
  type, bind(c) :: timedelta
    character(c_char)  :: sign
    integer(c_int64_t) :: year
    integer(c_int)     :: month
    integer(c_int)     :: day
    integer(c_int)     :: hour
    integer(c_int)     :: minute
    integer(c_int)     :: second
    integer(c_int)     :: ms
  end type timedelta
  !
  interface operator (+)
    module procedure addtimedeltatodatetime
    module procedure adddatetimetotimedelta
  end interface operator (+)
  !
  interface
    !
    function my_newtimedelta(string) result(c_pointer) bind(c, name='newTimeDelta')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_char, c_ptr
#endif
      type(c_ptr) :: c_pointer
      character(c_char), dimension(*) :: string
    end function my_newtimedelta
    !
    subroutine my_deallocatetimedelta(dt) bind(c, name='deallocateTimeDelta')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_ptr
#endif
      type(c_ptr), value :: dt
    end subroutine my_deallocatetimedelta
    !
    function my_timedeltatostring(dt, tostring) result(string_ptr) bind(c, name='timedeltaToString')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_ptr, c_char
#endif
      type(c_ptr) :: string_ptr
      type(c_ptr), value :: dt
      character(c_char), dimension(*) :: tostring
    end function my_timedeltatostring
    !
    function my_addtimedeltatodatetime(my_datetime, my_timedelta, ret_datetime) result(datetime_ptr) &
         &   bind(c, name='addTimeDeltaToDateTime')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_ptr
#endif
      type(c_ptr), value :: my_datetime
      type(c_ptr), value :: my_timedelta
      type(c_ptr), value :: ret_datetime
      type(c_ptr) :: datetime_ptr
    end function my_addtimedeltatodatetime
    !
  end interface
  !
contains
  !
  function newTimedelta(string) result(ret_timedelta)
    type(timedelta), pointer :: ret_timedelta
    character(len=*), intent(in) :: string
    type(c_ptr) :: c_pointer
    c_pointer = my_newtimedelta(trim(string)//c_null_char)
    call c_f_pointer(c_pointer, ret_timedelta)
  end function newTimedelta
  !
  subroutine deallocateTimedelta(my_timedelta)
    type(timedelta), pointer :: my_timedelta
    call my_deallocatetimedelta(c_loc(my_timedelta))
    nullify(my_timedelta)
  end subroutine deallocateTimedelta
  !
  subroutine timedeltaToString(my_timedelta, string)
    type(timedelta), pointer :: my_timedelta
    character(len=max_timedelta_str_len) :: string
    type(c_ptr) :: dummy_ptr
    integer :: i
    dummy_ptr = my_timedeltatostring(c_loc(my_timedelta), string)
    char_loop: do i = 1 , len(string)
      if (string(i:i) == c_null_char) exit char_loop
    end do char_loop
    string(i:len(string)) = ' '
  end subroutine timedeltaToString
  !
  function addTimedeltaToDatetime(op1, op2) result(ret)
    type(datetime), target :: ret
    type(datetime), target, intent(in) :: op1
    type(timedelta), target, intent(in) :: op2
    type(c_ptr) :: dummy_ptr
    dummy_ptr = my_addtimedeltatodatetime(c_loc(op1), c_loc(op2), c_loc(ret))
  end function addTimedeltaToDatetime
  !
  function addDatetimeToTimedelta(op2, op1) result(ret)
    type(datetime), target :: ret
    type(datetime), target, intent(in) :: op1
    type(timedelta), target, intent(in) :: op2
    type(c_ptr) :: dummy_ptr
    dummy_ptr = my_addtimedeltatodatetime(c_loc(op1), c_loc(op2), c_loc(ret))
  end function addDatetimeToTimedelta
  !
end module mtime_timedelta
!>
!! @brief Definition of the basic event type and its methods.
!!
!! @details
!!
!___________________________________________________________________________________________________________
module mtime_events
  !
  use, intrinsic :: iso_c_binding, only: c_int64_t, c_char, c_null_char, c_bool, c_ptr, c_loc, c_f_pointer
  !
  implicit none
  !
  private
  !
  public :: max_eventname_str_len
  public :: event
  public :: newEvent
  public :: deallocateEvent
  public :: eventToString
  !
  !> provides a string length for toString 
  integer, parameter :: max_eventname_str_len = 132
  !
  type, bind(c) :: event
    type(c_ptr) :: nextEventInGroup
    integer(c_int64_t) :: eventId
    type(c_ptr) :: eventName
    type(c_ptr) :: eventReferenceDatetime
    type(c_ptr) :: eventFirstDatetime
    type(c_ptr) :: eventLastDatetime
    type(c_ptr) :: eventInterval
    logical(c_bool) :: triggerCurrentEvent
    logical(c_bool) :: nextEventIsFirst
    logical(c_bool) :: eventisFirstInDay
    logical(c_bool) :: eventisFirstInMonth
    logical(c_bool) :: eventisFirstInYear
    logical(c_bool) :: eventisLastInDay
    logical(c_bool) :: eventisLastInMonth
    logical(c_bool) :: eventisLastInYear
    type(c_ptr) :: triggerNextEventDateTime
    type(c_ptr) :: triggeredPreviousEventDateTime
  end type event
  !
  interface
    !
    function my_newevent(name, referenceDate, firstdate, lastDate, interval) result(c_pointer) bind(c, name='newEvent')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_char, c_ptr
#endif
      type(c_ptr) :: c_pointer
      character(c_char), dimension(*) :: name
      character(c_char), dimension(*) :: referenceDate
      character(c_char), dimension(*) :: firstDate
      character(c_char), dimension(*) :: lastDate
      character(c_char), dimension(*) :: interval
    end function my_newevent
    !
    subroutine my_deallocateevent(ev) bind(c,name='deallocateEvent')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_ptr
#endif
      type(c_ptr), value :: ev
    end subroutine my_deallocateevent
    !
    function my_eventtostring(my_event, string) result(string_ptr) bind(c, name='eventToString')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_ptr, c_char
#endif
      type(c_ptr) :: string_ptr
      type(c_ptr), value :: my_event
      character(c_char), dimension(*) :: string
    end function my_eventtostring
    !
  end interface
  !
contains
  !
  function newEvent(name, referenceDate, firstdate, lastDate, interval) result(ret_event)
    type(event), pointer :: ret_event
    character(len=*), intent(in) :: name
    character(len=*), intent(in) :: referenceDate
    character(len=*), intent(in) :: firstDate
    character(len=*), intent(in) :: lastDate
    character(len=*), intent(in) :: interval
    type(c_ptr) :: c_pointer
    c_pointer = my_newevent(trim(name)//c_null_char,               &
         &                  trim(referenceDate)//c_null_char,      &
         &                  trim(firstDate)//c_null_char,          &
         &                  trim(lastDate)//c_null_char,           &
         &                  trim(interval)//c_null_char)
    call c_f_pointer(c_pointer, ret_event)
  end function newEvent
  !
  subroutine deallocateEvent(my_event)
    type(event), pointer :: my_event
    call my_deallocateevent(c_loc(my_event))
    my_event => null()
  end subroutine deallocateEvent
  !
  subroutine eventToString(my_event, string)
    type(event), pointer :: my_event
    character(len=max_eventname_str_len) :: string
    type(c_ptr) :: dummy_ptr
    integer :: i
    dummy_ptr = my_eventtostring(c_loc(my_event), string)
    char_loop: do i = 1 , len(string)
      if (string(i:i) == c_null_char) exit char_loop
    end do char_loop
    string(i:len(string)) = ' '
  end subroutine eventToString
  !
end module mtime_events
!>
!! @brief Event-groups which contains a list of events.
!!
!! @details
!!
!! @author  Luis Kornblueh, Max Planck Institute for Meteorology
!! @author  Rahul Sinha, Max Planck Institute for Meteorology
!!
!___________________________________________________________________________________________________________
module mtime_eventgroups
  !
  use, intrinsic :: iso_c_binding, only: c_int64_t, c_ptr, c_char, c_null_char, c_bool, c_loc, c_f_pointer, &
       &            c_associated
  !
  use mtime_events
  !
  implicit none
  !
  private
  !
  public :: max_groupname_str_len
  public :: eventgroup
  public :: newEventGroup
  public :: deallocateEventGroup
  public :: addEventToEventGroup
  public :: removeEventFromEventGroup
  public :: getFirstEventFromEventGroup
  public :: getNextEventFromEventGRoup
  !
  !> provides a string length for toString 
  integer, parameter :: max_groupname_str_len = 132
  !
  type, bind(c) :: eventgroup
    integer(c_int64_t) :: eventGroupId
    type(c_ptr) :: eventGroupName
    type(c_ptr) :: firstEventInGroup
  end type eventgroup
  !
  interface
    !
    function my_neweventgroup(name) result(c_pointer) bind(c, name='newEventGroup')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_char, c_ptr
#endif
      type(c_ptr) :: c_pointer
      character(c_char), dimension(*) :: name
    end function my_neweventgroup
    !
    subroutine my_deallocateeventgroup(evgrp) bind(c,name='deallocateEventGroup')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_ptr
#endif
      type(c_ptr), value :: evgrp
    end subroutine my_deallocateeventgroup
    !
    function my_addeventtoeventgroup(my_event, my_eventgroup) result(ret) bind(c, name='addNewEventToEventGroup')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_bool, c_ptr
#endif
      logical(c_bool) :: ret
      type(c_ptr), value :: my_event
      type(c_ptr), value :: my_eventgroup
    end function my_addeventtoeventgroup
    !
    function my_removeeventfromeventgroup(evname, evgrp) result(ret) bind(c, name='removeEventFromEventGroup')
#ifdef __SX__
      use, intrinsic :: iso_c_binding, only: c_int  
#else
      import :: c_bool, c_char, c_ptr
#endif
      logical(c_bool) :: ret
      character(c_char), dimension(*) :: evname
      type(c_ptr), value :: evgrp
    end function my_removeeventfromeventgroup
    !
  end interface
  !
contains
  !
  function newEventGroup(name) result(ret_eventgroup)
    type(eventgroup), pointer :: ret_eventgroup
    character(len=*), intent(in) :: name
    type(c_ptr) :: c_pointer
    c_pointer = my_neweventgroup(trim(name)//c_null_char)
    call c_f_pointer(c_pointer, ret_eventgroup)
  end function newEventGroup
  !
  subroutine deallocateEventGroup(my_eventgroup)
    type(eventgroup), pointer :: my_eventgroup
    call my_deallocateeventgroup(c_loc(my_eventgroup))
    my_eventgroup => null()
  end subroutine deallocateEventGroup
  !
  function addEventToEventGroup(my_event, my_eventGroup) result(ret)
    logical :: ret
    type(event), pointer :: my_event
    type(eventgroup), pointer :: my_eventgroup
    ret = my_addeventtoeventgroup(c_loc(my_event), c_loc(my_eventgroup))
  end function addEventToEventGroup
  !
  function removeEventfromEventGroup(my_name, my_eventGroup) result(ret)
    logical :: ret
    character(len=*), intent(in) :: my_name
